variables4/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0384]: cannot assign twice to immutable variable `x`
  --> src/lib.rs:11:5
   |
9  |     let x = 3;
   |         - first assignment to `x`
10 |     println!("Number {}", x);
11 |     x = 5; // don't change this line
   |     ^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
9  |     let mut x = 3;
   |         +++

For more information about this error, try `rustc --explain E0384`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
